--- a/Doxygen documentation/latex/_extra_8h.tex
+++ b/Doxygen documentation/latex/_extra_8h.tex
@@ -1,20 +1,20 @@
-\hypertarget{_extra_8h}{}\doxysection{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\+Extra.h File Reference}
-\label{_extra_8h}\index{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/Tetris/Extra.h@{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/Tetris/Extra.h}}
+\hypertarget{_extra_8h}{}\doxysection{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\+Extra.h File Reference}
+\label{_extra_8h}\index{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/Extra.h@{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/Extra.h}}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{goto\+XY}} (int x, int y)
-\begin{DoxyCompactList}\small\item\em Moves the cursor at (x, y) coords (windows.\+h) \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay}} (float number\+\_\+of\+\_\+seconds)
-\begin{DoxyCompactList}\small\item\em Waits for a certain number of seconds. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_extra_8h_ab31643a884d56d21baa151f155d93b26}{load\+Game}} ()
-\begin{DoxyCompactList}\small\item\em Prints out the loading bar. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_extra_8h_ae3629e6aee96848a9799d6706b42aa3d}{close\+Game}} ()
-\begin{DoxyCompactList}\small\item\em Shutting down bar while closing the game. \end{DoxyCompactList}\item 
+\item 
 int \mbox{\hyperlink{_extra_8h_acd245ad1ccba04eebd92376ea44cb41d}{clean\+\_\+stdin}} ()
-\begin{DoxyCompactList}\small\item\em Useful to prevent input mistakes (wrong data type) \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_extra_8h_ade365d5befabc715613a08d8248d5aea}{fill\+One}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]})
-\begin{DoxyCompactList}\small\item\em Fills the map with \textquotesingle{}1\textquotesingle{}. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 
 
 \doxysubsection{Function Documentation}
@@ -24,47 +24,27 @@ void \mbox{\hyperlink{_extra_8h_ade365d5befabc715613a08d8248d5aea}{fill\+One}} (
 \doxysubsubsection{\texorpdfstring{clean\_stdin()}{clean\_stdin()}}
 {\footnotesize\ttfamily int clean\+\_\+stdin (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-
-
-Useful to prevent input mistakes (wrong data type) 
-
-\begin{DoxyReturn}{Returns}
+Useful to prevent input mistakes (wrong data type) \begin{DoxyReturn}{Returns}
 1 
 \end{DoxyReturn}
-
-
-Definition at line \mbox{\hyperlink{_extra_8h_source_l00085}{85}} of file \mbox{\hyperlink{_extra_8h_source}{Extra.\+h}}.
-
 \mbox{\Hypertarget{_extra_8h_ae3629e6aee96848a9799d6706b42aa3d}\label{_extra_8h_ae3629e6aee96848a9799d6706b42aa3d}} 
 \index{Extra.h@{Extra.h}!closeGame@{closeGame}}
 \index{closeGame@{closeGame}!Extra.h@{Extra.h}}
 \doxysubsubsection{\texorpdfstring{closeGame()}{closeGame()}}
 {\footnotesize\ttfamily void close\+Game (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-
-
-Shutting down bar while closing the game. 
-
-\begin{DoxySeeAlso}{See also}
+Shutting down bar while closing the game \begin{DoxySeeAlso}{See also}
 \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{goto\+XY()}} 
 
 \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_extra_8h_source_l00065}{65}} of file \mbox{\hyperlink{_extra_8h_source}{Extra.\+h}}.
-
 \mbox{\Hypertarget{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}\label{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}} 
 \index{Extra.h@{Extra.h}!delay@{delay}}
 \index{delay@{delay}!Extra.h@{Extra.h}}
 \doxysubsubsection{\texorpdfstring{delay()}{delay()}}
 {\footnotesize\ttfamily void delay (\begin{DoxyParamCaption}\item[{float}]{number\+\_\+of\+\_\+seconds }\end{DoxyParamCaption})}
 
-
-
-Waits for a certain number of seconds. 
-
-
+Waits for a certain number of seconds 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em number\+\_\+of\+\_\+seconds} & amount of seconds to wait \\
 \hline
@@ -72,40 +52,24 @@ Waits for a certain number of seconds.
 \begin{DoxySeeAlso}{See also}
 clock() 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_extra_8h_source_l00025}{25}} of file \mbox{\hyperlink{_extra_8h_source}{Extra.\+h}}.
-
 \mbox{\Hypertarget{_extra_8h_ade365d5befabc715613a08d8248d5aea}\label{_extra_8h_ade365d5befabc715613a08d8248d5aea}} 
 \index{Extra.h@{Extra.h}!fillOne@{fillOne}}
 \index{fillOne@{fillOne}!Extra.h@{Extra.h}}
 \doxysubsubsection{\texorpdfstring{fillOne()}{fillOne()}}
 {\footnotesize\ttfamily void fill\+One (\begin{DoxyParamCaption}\item[{int}]{map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]} }\end{DoxyParamCaption})}
 
-
-
-Fills the map with \textquotesingle{}1\textquotesingle{}. 
-
-
+Fills the map with \textquotesingle{}1\textquotesingle{} 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ out}}  & {\em map} & game map \\
 \hline
 \end{DoxyParams}
-
-
-Definition at line \mbox{\hyperlink{_extra_8h_source_l00096}{96}} of file \mbox{\hyperlink{_extra_8h_source}{Extra.\+h}}.
-
 \mbox{\Hypertarget{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}\label{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}} 
 \index{Extra.h@{Extra.h}!gotoXY@{gotoXY}}
 \index{gotoXY@{gotoXY}!Extra.h@{Extra.h}}
 \doxysubsubsection{\texorpdfstring{gotoXY()}{gotoXY()}}
 {\footnotesize\ttfamily void goto\+XY (\begin{DoxyParamCaption}\item[{int}]{x,  }\item[{int}]{y }\end{DoxyParamCaption})}
 
-
-
 Moves the cursor at (x, y) coords (windows.\+h) 
-
-
 \begin{DoxyParams}{Parameters}
 {\em x} & screen x coord. \\
 \hline
@@ -115,26 +79,14 @@ Moves the cursor at (x, y) coords (windows.\+h)
 \begin{DoxySeeAlso}{See also}
 Set\+Console\+Cursor\+Position() 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_extra_8h_source_l00008}{8}} of file \mbox{\hyperlink{_extra_8h_source}{Extra.\+h}}.
-
 \mbox{\Hypertarget{_extra_8h_ab31643a884d56d21baa151f155d93b26}\label{_extra_8h_ab31643a884d56d21baa151f155d93b26}} 
 \index{Extra.h@{Extra.h}!loadGame@{loadGame}}
 \index{loadGame@{loadGame}!Extra.h@{Extra.h}}
 \doxysubsubsection{\texorpdfstring{loadGame()}{loadGame()}}
 {\footnotesize\ttfamily void load\+Game (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-
-
-Prints out the loading bar. 
-
-\begin{DoxySeeAlso}{See also}
+Prints out the loading bar \begin{DoxySeeAlso}{See also}
 \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{goto\+XY()}} 
 
 \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_extra_8h_source_l00041}{41}} of file \mbox{\hyperlink{_extra_8h_source}{Extra.\+h}}.
-
