--- a/Doxygen documentation/latex/_print_8h.tex
+++ b/Doxygen documentation/latex/_print_8h.tex
@@ -1,42 +1,42 @@
-\hypertarget{_print_8h}{}\doxysection{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\+Print.h File Reference}
-\label{_print_8h}\index{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/Tetris/Print.h@{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/Tetris/Print.h}}
+\hypertarget{_print_8h}{}\doxysection{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\+Print.h File Reference}
+\label{_print_8h}\index{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/Print.h@{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/Print.h}}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{_print_8h_a2aa18c495cf17747e69b7fc8d45fe437}{print\+Map}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]})
-\begin{DoxyCompactList}\small\item\em Prints out the map (Single\+Player) \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{_print_8h_a1dd3cf15452a5093ce71f8d9ec956e9c}{print\+Map\+Color}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$\mbox{\hyperlink{main_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$color0, int center)
-\begin{DoxyCompactList}\small\item\em Prints out the map in different colors (Multiplayer) \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{_print_8h_a2875dfc0ecfe0639e759d9814d48f52e}{print\+Maps}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$\mbox{\hyperlink{main_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{main_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char $\ast$color0)
-\begin{DoxyCompactList}\small\item\em Prints out two maps at the same time in different colors (Multiplayer) \end{DoxyCompactList}\item 
+\item 
+void \mbox{\hyperlink{_print_8h_a1dd3cf15452a5093ce71f8d9ec956e9c}{print\+Map\+Color}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$color1, char $\ast$color0, int center)
+\item 
+void \mbox{\hyperlink{_print_8h_a2875dfc0ecfe0639e759d9814d48f52e}{print\+Maps}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$color1, char $\ast$color2, char $\ast$color0)
+\item 
 void \mbox{\hyperlink{_print_8h_a9c20781191d0dadbbcea017aab19e83f}{print\+Map2}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]})
-\begin{DoxyCompactList}\small\item\em Prints out the map in two colors. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_print_8h_a5564a74283c7de4315aa6c31e3a18cd1}{print\+Title}} (char $\ast$title)
-\begin{DoxyCompactList}\small\item\em Prints out a Title in the middle of the current line. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_print_8h_ae5ced7d7e756c5e7cc57256ac6865aa3}{print\+Game\+Menu}} ()
-\begin{DoxyCompactList}\small\item\em Prints out the Main Game Menu. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_print_8h_af93aaa5be98af25bcbce45e2048fe1c5}{print\+SMode\+Options}} ()
-\begin{DoxyCompactList}\small\item\em Prits out the Single\+Player Game Menu. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{_print_8h_a7163d93faf2f9bfaf60660fa60164095}{print\+Avaible\+Pieces}} (int $\ast$pieces, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, char $\ast$color\+Mode, char $\ast$color\+Piece)
-\begin{DoxyCompactList}\small\item\em Prints out which pieces are avaible or not. \end{DoxyCompactList}\item 
+\item 
+void \mbox{\hyperlink{_print_8h_a7163d93faf2f9bfaf60660fa60164095}{print\+Avaible\+Pieces}} (int $\ast$pieces, int dim, char $\ast$color\+Mode, char $\ast$color\+Piece)
+\item 
 void \mbox{\hyperlink{_print_8h_ae77770b22209ba7e20e82bbe37cc2b25}{print\+Legenda\+Pieces}} (char $\ast$color\+Mode, char $\ast$color\+Piece)
-\begin{DoxyCompactList}\small\item\em Prints out the mini Legenda to match a number with each piece. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_print_8h_a5c0024f7636f893e7c57e72c6f0e7f93}{print\+Legenda\+All\+Pieces}} (char $\ast$color\+Mode, char $\ast$color\+Piece)
-\begin{DoxyCompactList}\small\item\em Prints out the Full Legenda. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_print_8h_ad5deb4d6da93418db2c13080bae46bdc}{print\+Move\+Menu}} (int x, int y, char $\ast$color\+Mode)
-\begin{DoxyCompactList}\small\item\em Prints out the Move Menu\+: how to move the piece. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_print_8h_aab849fdc6e864a042e075a698cb0a6b5}{print\+Score\+Name}} (int score, char $\ast$color\+Mode, int y, char player, char name\mbox{[}20\mbox{]})
-\begin{DoxyCompactList}\small\item\em Prints out the player\textquotesingle{}s score. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_print_8h_ae953d69c998a186cfa2f6a69aa15c09a}{print\+Score}} (int score, char $\ast$color\+Mode, int y, char player)
-\begin{DoxyCompactList}\small\item\em Prints out the player\textquotesingle{}s score. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_print_8h_a535d6e965412bba0c9f8b027d8160b60}{print\+Score\+PC}} (int score, char $\ast$color\+Mode, int y, char player)
-\begin{DoxyCompactList}\small\item\em Prints out PC score. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_print_8h_a1076c28ca965d7ebaa8a26c91488e457}{print\+Winner}} (char name\mbox{[}20\mbox{]})
-\begin{DoxyCompactList}\small\item\em Prints out Winner interface. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_print_8h_a9fbc1f7e744174b1dab9de2a2a923803}{print\+Loser}} (char name\mbox{[}20\mbox{]})
-\begin{DoxyCompactList}\small\item\em Prints out Loser interface. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_print_8h_a277aa4d6daf83c78553264a2483b009a}{print\+Pareggio}} ()
-\begin{DoxyCompactList}\small\item\em Prints out Winner interface. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 
 
 \doxysubsection{Function Documentation}
@@ -46,11 +46,7 @@ void \mbox{\hyperlink{_print_8h_a277aa4d6daf83c78553264a2483b009a}{print\+Paregg
 \doxysubsubsection{\texorpdfstring{printAvaiblePieces()}{printAvaiblePieces()}}
 {\footnotesize\ttfamily void print\+Avaible\+Pieces (\begin{DoxyParamCaption}\item[{int $\ast$}]{pieces,  }\item[{int}]{dim,  }\item[{char $\ast$}]{color\+Mode,  }\item[{char $\ast$}]{color\+Piece }\end{DoxyParamCaption})}
 
-
-
-Prints out which pieces are avaible or not. 
-
-
+Prints out which pieces are avaible or not 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em pieces} & pointer to avaiblepieces array \\
 \hline
@@ -64,35 +60,19 @@ Prints out which pieces are avaible or not.
 \begin{DoxySeeAlso}{See also}
 \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00162}{162}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_ae5ced7d7e756c5e7cc57256ac6865aa3}\label{_print_8h_ae5ced7d7e756c5e7cc57256ac6865aa3}} 
 \index{Print.h@{Print.h}!printGameMenu@{printGameMenu}}
 \index{printGameMenu@{printGameMenu}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printGameMenu()}{printGameMenu()}}
 {\footnotesize\ttfamily void print\+Game\+Menu (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-
-
-Prints out the Main Game Menu. 
-
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00138}{138}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
-\mbox{\Hypertarget{_print_8h_a5c0024f7636f893e7c57e72c6f0e7f93}\label{_print_8h_a5c0024f7636f893e7c57e72c6f0e7f93}} 
+Prints out the Main Game Menu \mbox{\Hypertarget{_print_8h_a5c0024f7636f893e7c57e72c6f0e7f93}\label{_print_8h_a5c0024f7636f893e7c57e72c6f0e7f93}} 
 \index{Print.h@{Print.h}!printLegendaAllPieces@{printLegendaAllPieces}}
 \index{printLegendaAllPieces@{printLegendaAllPieces}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printLegendaAllPieces()}{printLegendaAllPieces()}}
 {\footnotesize\ttfamily void print\+Legenda\+All\+Pieces (\begin{DoxyParamCaption}\item[{char $\ast$}]{color\+Mode,  }\item[{char $\ast$}]{color\+Piece }\end{DoxyParamCaption})}
 
-
-
-Prints out the Full Legenda. 
-
-
+Prints out the Full Legenda 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
 \hline
@@ -144,21 +124,13 @@ Prints out the Full Legenda.
 
 \mbox{\hyperlink{_draw_pieces_8h_a1f0f37fcbe16c992da82419f30c529e6}{drawO}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00239}{239}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_ae77770b22209ba7e20e82bbe37cc2b25}\label{_print_8h_ae77770b22209ba7e20e82bbe37cc2b25}} 
 \index{Print.h@{Print.h}!printLegendaPieces@{printLegendaPieces}}
 \index{printLegendaPieces@{printLegendaPieces}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printLegendaPieces()}{printLegendaPieces()}}
 {\footnotesize\ttfamily void print\+Legenda\+Pieces (\begin{DoxyParamCaption}\item[{char $\ast$}]{color\+Mode,  }\item[{char $\ast$}]{color\+Piece }\end{DoxyParamCaption})}
 
-
-
-Prints out the mini Legenda to match a number with each piece. 
-
-
+Prints out the mini Legenda to match a number with each piece 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em color\+Mode} & text color \\
 \hline
@@ -168,21 +140,13 @@ Prints out the mini Legenda to match a number with each piece.
 \begin{DoxySeeAlso}{See also}
 \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00184}{184}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_a9fbc1f7e744174b1dab9de2a2a923803}\label{_print_8h_a9fbc1f7e744174b1dab9de2a2a923803}} 
 \index{Print.h@{Print.h}!printLoser@{printLoser}}
 \index{printLoser@{printLoser}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printLoser()}{printLoser()}}
 {\footnotesize\ttfamily void print\+Loser (\begin{DoxyParamCaption}\item[{char}]{name\mbox{[}20\mbox{]} }\end{DoxyParamCaption})}
 
-
-
-Prints out Loser interface. 
-
-
+Prints out Loser interface 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em name} & player\textquotesingle{}s name \\
 \hline
@@ -194,21 +158,13 @@ Prints out Loser interface.
 
 \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00489}{489}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_a2aa18c495cf17747e69b7fc8d45fe437}\label{_print_8h_a2aa18c495cf17747e69b7fc8d45fe437}} 
 \index{Print.h@{Print.h}!printMap@{printMap}}
 \index{printMap@{printMap}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printMap()}{printMap()}}
 {\footnotesize\ttfamily void print\+Map (\begin{DoxyParamCaption}\item[{int}]{map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]} }\end{DoxyParamCaption})}
 
-
-
 Prints out the map (Single\+Player) 
-
-
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em map} & game map \\
 \hline
@@ -218,21 +174,13 @@ Prints out the map (Single\+Player)
 
 \mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta\+Righe()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00007}{7}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_a9c20781191d0dadbbcea017aab19e83f}\label{_print_8h_a9c20781191d0dadbbcea017aab19e83f}} 
 \index{Print.h@{Print.h}!printMap2@{printMap2}}
 \index{printMap2@{printMap2}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printMap2()}{printMap2()}}
 {\footnotesize\ttfamily void print\+Map2 (\begin{DoxyParamCaption}\item[{int}]{map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]} }\end{DoxyParamCaption})}
 
-
-
-Prints out the map in two colors. 
-
-
+Prints out the map in two colors 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em map} & game map \\
 \hline
@@ -242,21 +190,13 @@ Prints out the map in two colors.
 
 \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00107}{107}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_a1dd3cf15452a5093ce71f8d9ec956e9c}\label{_print_8h_a1dd3cf15452a5093ce71f8d9ec956e9c}} 
 \index{Print.h@{Print.h}!printMapColor@{printMapColor}}
 \index{printMapColor@{printMapColor}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printMapColor()}{printMapColor()}}
 {\footnotesize\ttfamily void print\+Map\+Color (\begin{DoxyParamCaption}\item[{int}]{map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]},  }\item[{char $\ast$}]{color1,  }\item[{char $\ast$}]{color0,  }\item[{int}]{center }\end{DoxyParamCaption})}
 
-
-
 Prints out the map in different colors (Multiplayer) 
-
-
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em map} & game map \\
 \hline
@@ -274,21 +214,13 @@ Prints out the map in different colors (Multiplayer)
 
 \mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta\+Righe()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00034}{34}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_a2875dfc0ecfe0639e759d9814d48f52e}\label{_print_8h_a2875dfc0ecfe0639e759d9814d48f52e}} 
 \index{Print.h@{Print.h}!printMaps@{printMaps}}
 \index{printMaps@{printMaps}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printMaps()}{printMaps()}}
 {\footnotesize\ttfamily void print\+Maps (\begin{DoxyParamCaption}\item[{int}]{map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]},  }\item[{int}]{map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]},  }\item[{char $\ast$}]{color1,  }\item[{char $\ast$}]{color2,  }\item[{char $\ast$}]{color0 }\end{DoxyParamCaption})}
 
-
-
 Prints out two maps at the same time in different colors (Multiplayer) 
-
-
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em map} & game map \\
 \hline
@@ -308,21 +240,13 @@ Prints out two maps at the same time in different colors (Multiplayer)
 
 \mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta\+Righe()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00066}{66}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_ad5deb4d6da93418db2c13080bae46bdc}\label{_print_8h_ad5deb4d6da93418db2c13080bae46bdc}} 
 \index{Print.h@{Print.h}!printMoveMenu@{printMoveMenu}}
 \index{printMoveMenu@{printMoveMenu}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printMoveMenu()}{printMoveMenu()}}
 {\footnotesize\ttfamily void print\+Move\+Menu (\begin{DoxyParamCaption}\item[{int}]{x,  }\item[{int}]{y,  }\item[{char $\ast$}]{color\+Mode }\end{DoxyParamCaption})}
 
-
-
-Prints out the Move Menu\+: how to move the piece. 
-
-
+Prints out the Move Menu\+: how to move the piece 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em x} & current x coord. \\
 \hline
@@ -336,42 +260,26 @@ Prints out the Move Menu\+: how to move the piece.
 
 \mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{center\+Text()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00390}{390}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_a277aa4d6daf83c78553264a2483b009a}\label{_print_8h_a277aa4d6daf83c78553264a2483b009a}} 
 \index{Print.h@{Print.h}!printPareggio@{printPareggio}}
 \index{printPareggio@{printPareggio}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printPareggio()}{printPareggio()}}
 {\footnotesize\ttfamily void print\+Pareggio (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-
-
-Prints out Winner interface. 
-
-\begin{DoxySeeAlso}{See also}
+Prints out Winner interface \begin{DoxySeeAlso}{See also}
 \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
 
 \mbox{\hyperlink{_print_8h_a5564a74283c7de4315aa6c31e3a18cd1}{print\+Title()}} 
 
 \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00504}{504}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_ae953d69c998a186cfa2f6a69aa15c09a}\label{_print_8h_ae953d69c998a186cfa2f6a69aa15c09a}} 
 \index{Print.h@{Print.h}!printScore@{printScore}}
 \index{printScore@{printScore}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printScore()}{printScore()}}
 {\footnotesize\ttfamily void print\+Score (\begin{DoxyParamCaption}\item[{int}]{score,  }\item[{char $\ast$}]{color\+Mode,  }\item[{int}]{y,  }\item[{char}]{player }\end{DoxyParamCaption})}
 
-
-
-Prints out the player\textquotesingle{}s score. 
-
-
+Prints out the player\textquotesingle{}s score 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em score} & current score \\
 \hline
@@ -387,21 +295,13 @@ Prints out the player\textquotesingle{}s score.
 
 \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{goto\+XY()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00443}{443}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_aab849fdc6e864a042e075a698cb0a6b5}\label{_print_8h_aab849fdc6e864a042e075a698cb0a6b5}} 
 \index{Print.h@{Print.h}!printScoreName@{printScoreName}}
 \index{printScoreName@{printScoreName}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printScoreName()}{printScoreName()}}
 {\footnotesize\ttfamily void print\+Score\+Name (\begin{DoxyParamCaption}\item[{int}]{score,  }\item[{char $\ast$}]{color\+Mode,  }\item[{int}]{y,  }\item[{char}]{player,  }\item[{char}]{name\mbox{[}20\mbox{]} }\end{DoxyParamCaption})}
 
-
-
-Prints out the player\textquotesingle{}s score. 
-
-
+Prints out the player\textquotesingle{}s score 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em score} & current score \\
 \hline
@@ -419,21 +319,13 @@ Prints out the player\textquotesingle{}s score.
 
 \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{goto\+XY()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00423}{423}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_a535d6e965412bba0c9f8b027d8160b60}\label{_print_8h_a535d6e965412bba0c9f8b027d8160b60}} 
 \index{Print.h@{Print.h}!printScorePC@{printScorePC}}
 \index{printScorePC@{printScorePC}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printScorePC()}{printScorePC()}}
 {\footnotesize\ttfamily void print\+Score\+PC (\begin{DoxyParamCaption}\item[{int}]{score,  }\item[{char $\ast$}]{color\+Mode,  }\item[{int}]{y,  }\item[{char}]{player }\end{DoxyParamCaption})}
 
-
-
-Prints out PC score. 
-
-
+Prints out PC score 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em score} & current score \\
 \hline
@@ -449,35 +341,19 @@ Prints out PC score.
 
 \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{goto\+XY()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00459}{459}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_af93aaa5be98af25bcbce45e2048fe1c5}\label{_print_8h_af93aaa5be98af25bcbce45e2048fe1c5}} 
 \index{Print.h@{Print.h}!printSModeOptions@{printSModeOptions}}
 \index{printSModeOptions@{printSModeOptions}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printSModeOptions()}{printSModeOptions()}}
 {\footnotesize\ttfamily void print\+SMode\+Options (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-
-
-Prits out the Single\+Player Game Menu. 
-
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00148}{148}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
-\mbox{\Hypertarget{_print_8h_a5564a74283c7de4315aa6c31e3a18cd1}\label{_print_8h_a5564a74283c7de4315aa6c31e3a18cd1}} 
+Prits out the Single\+Player Game Menu \mbox{\Hypertarget{_print_8h_a5564a74283c7de4315aa6c31e3a18cd1}\label{_print_8h_a5564a74283c7de4315aa6c31e3a18cd1}} 
 \index{Print.h@{Print.h}!printTitle@{printTitle}}
 \index{printTitle@{printTitle}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printTitle()}{printTitle()}}
 {\footnotesize\ttfamily void print\+Title (\begin{DoxyParamCaption}\item[{char $\ast$}]{title }\end{DoxyParamCaption})}
 
-
-
-Prints out a Title in the middle of the current line. 
-
-
+Prints out a Title in the middle of the current line 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em title} & title name \\
 \hline
@@ -487,21 +363,13 @@ Prints out a Title in the middle of the current line.
 
 \mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta\+Righe()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00129}{129}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
 \mbox{\Hypertarget{_print_8h_a1076c28ca965d7ebaa8a26c91488e457}\label{_print_8h_a1076c28ca965d7ebaa8a26c91488e457}} 
 \index{Print.h@{Print.h}!printWinner@{printWinner}}
 \index{printWinner@{printWinner}!Print.h@{Print.h}}
 \doxysubsubsection{\texorpdfstring{printWinner()}{printWinner()}}
 {\footnotesize\ttfamily void print\+Winner (\begin{DoxyParamCaption}\item[{char}]{name\mbox{[}20\mbox{]} }\end{DoxyParamCaption})}
 
-
-
-Prints out Winner interface. 
-
-
+Prints out Winner interface 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em name} & player\textquotesingle{}s name \\
 \hline
@@ -513,7 +381,3 @@ Prints out Winner interface.
 
 \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay()}} 
 \end{DoxySeeAlso}
-
-
-Definition at line \mbox{\hyperlink{_print_8h_source_l00473}{473}} of file \mbox{\hyperlink{_print_8h_source}{Print.\+h}}.
-
