--- a/Doxygen documentation/latex/_extra_8h_source.tex
+++ b/Doxygen documentation/latex/_extra_8h_source.tex
@@ -1,82 +1,83 @@
-\hypertarget{_extra_8h_source}{}\doxysection{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\+Extra.h}
+\hypertarget{_extra_8h_source}{}\doxysection{Extra.\+h}
+\label{_extra_8h_source}\index{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/Extra.h@{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/Extra.h}}
 \mbox{\hyperlink{_extra_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00001}00001 }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00008}\mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{00008}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(\textcolor{keywordtype}{int} x, \textcolor{keywordtype}{int} y)\{}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00009}00009  }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00010}00010  COORD coord;}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00011}00011  }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00012}00012  coord.X = x;}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00013}00013  }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00014}00014  coord.Y = y;}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00015}00015  }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00016}00016  SetConsoleCursorPosition(GetStdHandle(STD\_OUTPUT\_HANDLE), coord);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00017}00017  }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00018}00018 \}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00019}00019 }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00025}\mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{00025}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay}}(\textcolor{keywordtype}{float} number\_of\_seconds)\{}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00026}00026     \textcolor{comment}{/* Converting time into milli\_seconds */}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00027}00027     \textcolor{keywordtype}{float} milli\_seconds = 1000 * number\_of\_seconds;}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00028}00028   }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00029}00029     \textcolor{comment}{/* Storing start time */}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00030}00030     clock\_t start\_time = clock();}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00031}00031   }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00032}00032     \textcolor{comment}{/* looping till required time is not achieved*/}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00033}00033     \textcolor{keywordflow}{while} (clock() < start\_time + milli\_seconds);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00034}00034 \}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00035}00035 }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00041}\mbox{\hyperlink{_extra_8h_ab31643a884d56d21baa151f155d93b26}{00041}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_extra_8h_ab31643a884d56d21baa151f155d93b26}{loadGame}}()\{}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00042}00042     \textcolor{keywordtype}{int} r, cnt = 5, n = 60, m = n;}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00043}00043     \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(n + 5, 25);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00044}00044     printf(\textcolor{stringliteral}{"{}LOADING..."{}});}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00045}00045     \textcolor{keywordflow}{for}(r=1;r<=20;r++)\{}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00046}00046         \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(n, 26);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00047}00047         \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay}}(0.100);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00048}00048         printf(\textcolor{stringliteral}{"{}\%c"{}}, 177);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00049}00049         \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(n + 5, 27);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00050}00050         printf(\textcolor{stringliteral}{"{}\%3d/100"{}}, cnt);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00051}00051         cnt += 5;}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00052}00052         n++;}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00053}00053     \}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00054}00054     }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00055}00055     \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(m + 2, 30);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00056}00056     printf(\textcolor{stringliteral}{"{}Enter anything to play \(\backslash\)n"{}});  }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00057}00057     getch();}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00058}00058 \}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00059}00059 }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00065}\mbox{\hyperlink{_extra_8h_ae3629e6aee96848a9799d6706b42aa3d}{00065}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_extra_8h_ae3629e6aee96848a9799d6706b42aa3d}{closeGame}}()\{}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00066}00066     \textcolor{keywordtype}{int} r, cnt = 5, n = 60;}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00067}00067     \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(n + 2, 25);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00068}00068     printf(\textcolor{stringliteral}{"{}SHUTTING DOWN..."{}});}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00069}00069     \textcolor{keywordflow}{for}(r=1;r<=20;r++)\{}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00070}00070         \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(n, 26);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00071}00071         \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay}}(0.100);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00072}00072         printf(\textcolor{stringliteral}{"{}\%c"{}}, 177);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00073}00073         \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(n + 5, 27);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00074}00074         printf(\textcolor{stringliteral}{"{}\%3d/100"{}}, cnt);}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00075}00075         cnt += 5;}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00076}00076         n++;}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00077}00077     \}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00078}00078 }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00079}00079 \}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00080}00080 }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00085}\mbox{\hyperlink{_extra_8h_acd245ad1ccba04eebd92376ea44cb41d}{00085}} \textcolor{keywordtype}{int} \mbox{\hyperlink{_extra_8h_acd245ad1ccba04eebd92376ea44cb41d}{clean\_stdin}}() \textcolor{comment}{/* useful to prevent input data errors */}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00086}00086 \{}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00087}00087     \textcolor{keywordflow}{while} (getchar()!=\textcolor{charliteral}{'\(\backslash\)n'});}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00088}00088     \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00089}00089 \}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00090}00090 }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00091}00091 \textcolor{comment}{/* self-\/made */}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00096}\mbox{\hyperlink{_extra_8h_ade365d5befabc715613a08d8248d5aea}{00096}} \textcolor{keywordtype}{void} \mbox{\hyperlink{_extra_8h_ade365d5befabc715613a08d8248d5aea}{fillOne}}(\textcolor{keywordtype}{int} map[15][10])\{}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00097}00097     \textcolor{keywordtype}{int} i, j;}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00098}00098     \textcolor{keywordflow}{for} (i = 1; i < \mbox{\hyperlink{main_8c_ad13e9131f5062934438fa82334e4b2ee}{height}} -\/ 1; i++)\{}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00099}00099         \textcolor{keywordflow}{for}(j = 1; j < \mbox{\hyperlink{main_8c_a837aabdd54757cb86d0f66387511753f}{width}} -\/ 1; j++)\{}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00100}00100             map[i][j] = 1;}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00101}00101         \}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00102}00102     \}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00103}00103 \}}
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00104}00104 }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00105}00105 }
-\DoxyCodeLine{\Hypertarget{_extra_8h_source_l00106}00106 }
+\DoxyCodeLine{1 }
+\DoxyCodeLine{8 \textcolor{keywordtype}{void} \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(\textcolor{keywordtype}{int} x, \textcolor{keywordtype}{int} y)\{}
+\DoxyCodeLine{9  }
+\DoxyCodeLine{10  COORD coord;}
+\DoxyCodeLine{11  }
+\DoxyCodeLine{12  coord.X = x;}
+\DoxyCodeLine{13  }
+\DoxyCodeLine{14  coord.Y = y;}
+\DoxyCodeLine{15  }
+\DoxyCodeLine{16  SetConsoleCursorPosition(GetStdHandle(STD\_OUTPUT\_HANDLE), coord);}
+\DoxyCodeLine{17  }
+\DoxyCodeLine{18 \}}
+\DoxyCodeLine{19 }
+\DoxyCodeLine{25 \textcolor{keywordtype}{void} \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay}}(\textcolor{keywordtype}{float} number\_of\_seconds)\{}
+\DoxyCodeLine{26     \textcolor{comment}{/* Converting time into milli\_seconds */}}
+\DoxyCodeLine{27     \textcolor{keywordtype}{float} milli\_seconds = 1000 * number\_of\_seconds;}
+\DoxyCodeLine{28   }
+\DoxyCodeLine{29     \textcolor{comment}{/* Storing start time */}}
+\DoxyCodeLine{30     clock\_t start\_time = clock();}
+\DoxyCodeLine{31   }
+\DoxyCodeLine{32     \textcolor{comment}{/* looping till required time is not achieved*/}}
+\DoxyCodeLine{33     \textcolor{keywordflow}{while} (clock() < start\_time + milli\_seconds);}
+\DoxyCodeLine{34 \}}
+\DoxyCodeLine{35 }
+\DoxyCodeLine{41 \textcolor{keywordtype}{void} \mbox{\hyperlink{_extra_8h_ab31643a884d56d21baa151f155d93b26}{loadGame}}()\{}
+\DoxyCodeLine{42     \textcolor{keywordtype}{int} r, cnt = 5, n = 60, m = n;}
+\DoxyCodeLine{43     \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(n + 5, 25);}
+\DoxyCodeLine{44     printf(\textcolor{stringliteral}{"{}LOADING..."{}});}
+\DoxyCodeLine{45     \textcolor{keywordflow}{for}(r=1;r<=20;r++)\{}
+\DoxyCodeLine{46         \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(n, 26);}
+\DoxyCodeLine{47         \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay}}(0.100);}
+\DoxyCodeLine{48         printf(\textcolor{stringliteral}{"{}\%c"{}}, 177);}
+\DoxyCodeLine{49         \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(n + 5, 27);}
+\DoxyCodeLine{50         printf(\textcolor{stringliteral}{"{}\%3d/100"{}}, cnt);}
+\DoxyCodeLine{51         cnt += 5;}
+\DoxyCodeLine{52         n++;}
+\DoxyCodeLine{53     \}}
+\DoxyCodeLine{54     }
+\DoxyCodeLine{55     \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(m + 2, 30);}
+\DoxyCodeLine{56     printf(\textcolor{stringliteral}{"{}Enter anything to play \(\backslash\)n"{}});  }
+\DoxyCodeLine{57     getch();}
+\DoxyCodeLine{58 \}}
+\DoxyCodeLine{59 }
+\DoxyCodeLine{65 \textcolor{keywordtype}{void} \mbox{\hyperlink{_extra_8h_ae3629e6aee96848a9799d6706b42aa3d}{closeGame}}()\{}
+\DoxyCodeLine{66     \textcolor{keywordtype}{int} r, cnt = 5, n = 60;}
+\DoxyCodeLine{67     \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(n + 2, 25);}
+\DoxyCodeLine{68     printf(\textcolor{stringliteral}{"{}SHUTTING DOWN..."{}});}
+\DoxyCodeLine{69     \textcolor{keywordflow}{for}(r=1;r<=20;r++)\{}
+\DoxyCodeLine{70         \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(n, 26);}
+\DoxyCodeLine{71         \mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay}}(0.100);}
+\DoxyCodeLine{72         printf(\textcolor{stringliteral}{"{}\%c"{}}, 177);}
+\DoxyCodeLine{73         \mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{gotoXY}}(n + 5, 27);}
+\DoxyCodeLine{74         printf(\textcolor{stringliteral}{"{}\%3d/100"{}}, cnt);}
+\DoxyCodeLine{75         cnt += 5;}
+\DoxyCodeLine{76         n++;}
+\DoxyCodeLine{77     \}}
+\DoxyCodeLine{78 }
+\DoxyCodeLine{79 \}}
+\DoxyCodeLine{80 }
+\DoxyCodeLine{85 \textcolor{keywordtype}{int} \mbox{\hyperlink{_extra_8h_acd245ad1ccba04eebd92376ea44cb41d}{clean\_stdin}}() \textcolor{comment}{/* useful to prevent input data errors */}}
+\DoxyCodeLine{86 \{}
+\DoxyCodeLine{87     \textcolor{keywordflow}{while} (getchar()!=\textcolor{charliteral}{'\(\backslash\)n'});}
+\DoxyCodeLine{88     \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{89 \}}
+\DoxyCodeLine{90 }
+\DoxyCodeLine{91 \textcolor{comment}{/* self-\/made */}}
+\DoxyCodeLine{96 \textcolor{keywordtype}{void} \mbox{\hyperlink{_extra_8h_ade365d5befabc715613a08d8248d5aea}{fillOne}}(\textcolor{keywordtype}{int} map[15][10])\{}
+\DoxyCodeLine{97     \textcolor{keywordtype}{int} i, j;}
+\DoxyCodeLine{98     \textcolor{keywordflow}{for} (i = 1; i < height -\/ 1; i++)\{}
+\DoxyCodeLine{99         \textcolor{keywordflow}{for}(j = 1; j < width -\/ 1; j++)\{}
+\DoxyCodeLine{100             map[i][j] = 1;}
+\DoxyCodeLine{101         \}}
+\DoxyCodeLine{102     \}}
+\DoxyCodeLine{103 \}}
+\DoxyCodeLine{104 }
+\DoxyCodeLine{105 }
+\DoxyCodeLine{106 }
 
 \end{DoxyCode}
