--- a/Doxygen documentation/latex/_initializer_8h.tex
+++ b/Doxygen documentation/latex/_initializer_8h.tex
@@ -1,14 +1,14 @@
-\hypertarget{_initializer_8h}{}\doxysection{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\+Initializer.h File Reference}
-\label{_initializer_8h}\index{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/Tetris/Initializer.h@{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/Tetris/Initializer.h}}
+\hypertarget{_initializer_8h}{}\doxysection{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\+Initializer.h File Reference}
+\label{_initializer_8h}\index{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/Initializer.h@{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/Initializer.h}}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{_initializer_8h_a3c193f4a435c0a6e3c521047d5c56a6d}{init\+Map}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]})
-\begin{DoxyCompactList}\small\item\em Initializes the map. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_initializer_8h_aae120d7676c71a9758569bcc70aa6678}{set\+Cursor}} (int $\ast$x, int $\ast$y, int vx, int vy)
-\begin{DoxyCompactList}\small\item\em Set the Cursor object. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{_initializer_8h_aa28b44bd9035c5570c5b36df4707657e}{init\+Avaible\+Pieces}} (int $\ast$pieces, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int limit)
-\begin{DoxyCompactList}\small\item\em Initializes avaible pieces array. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\item 
+void \mbox{\hyperlink{_initializer_8h_aa28b44bd9035c5570c5b36df4707657e}{init\+Avaible\+Pieces}} (int $\ast$pieces, int dim, int limit)
+\end{DoxyCompactItemize}
 
 
 \doxysubsection{Function Documentation}
@@ -18,9 +18,7 @@ void \mbox{\hyperlink{_initializer_8h_aa28b44bd9035c5570c5b36df4707657e}{init\+A
 \doxysubsubsection{\texorpdfstring{initAvaiblePieces()}{initAvaiblePieces()}}
 {\footnotesize\ttfamily void init\+Avaible\+Pieces (\begin{DoxyParamCaption}\item[{int $\ast$}]{pieces,  }\item[{int}]{dim,  }\item[{int}]{limit }\end{DoxyParamCaption})}
 
-
-
-Initializes avaible pieces array. 
+Initializes avaible pieces array
 
 
 \begin{DoxyParams}[1]{Parameters}
@@ -31,38 +29,24 @@ Initializes avaible pieces array.
 \mbox{\texttt{ in}}  & {\em limit} & a max value of availability \\
 \hline
 \end{DoxyParams}
-
-
-Definition at line \mbox{\hyperlink{_initializer_8h_source_l00034}{34}} of file \mbox{\hyperlink{_initializer_8h_source}{Initializer.\+h}}.
-
 \mbox{\Hypertarget{_initializer_8h_a3c193f4a435c0a6e3c521047d5c56a6d}\label{_initializer_8h_a3c193f4a435c0a6e3c521047d5c56a6d}} 
 \index{Initializer.h@{Initializer.h}!initMap@{initMap}}
 \index{initMap@{initMap}!Initializer.h@{Initializer.h}}
 \doxysubsubsection{\texorpdfstring{initMap()}{initMap()}}
 {\footnotesize\ttfamily void init\+Map (\begin{DoxyParamCaption}\item[{int}]{map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]} }\end{DoxyParamCaption})}
 
-
-
-Initializes the map. 
-
-
+Initializes the map 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ out}}  & {\em map} & game map \\
 \hline
 \end{DoxyParams}
-
-
-Definition at line \mbox{\hyperlink{_initializer_8h_source_l00005}{5}} of file \mbox{\hyperlink{_initializer_8h_source}{Initializer.\+h}}.
-
 \mbox{\Hypertarget{_initializer_8h_aae120d7676c71a9758569bcc70aa6678}\label{_initializer_8h_aae120d7676c71a9758569bcc70aa6678}} 
 \index{Initializer.h@{Initializer.h}!setCursor@{setCursor}}
 \index{setCursor@{setCursor}!Initializer.h@{Initializer.h}}
 \doxysubsubsection{\texorpdfstring{setCursor()}{setCursor()}}
 {\footnotesize\ttfamily void set\+Cursor (\begin{DoxyParamCaption}\item[{int $\ast$}]{x,  }\item[{int $\ast$}]{y,  }\item[{int}]{vx,  }\item[{int}]{vy }\end{DoxyParamCaption})}
 
-
-
-Set the Cursor object. 
+Set the Cursor object
 
 
 \begin{DoxyParams}[1]{Parameters}
@@ -75,7 +59,3 @@ Set the Cursor object.
 \mbox{\texttt{ in}}  & {\em vy} & y value \\
 \hline
 \end{DoxyParams}
-
-
-Definition at line \mbox{\hyperlink{_initializer_8h_source_l00022}{22}} of file \mbox{\hyperlink{_initializer_8h_source}{Initializer.\+h}}.
-
