--- a/Doxygen documentation/latex/_text_settings_8h.tex
+++ b/Doxygen documentation/latex/_text_settings_8h.tex
@@ -1,14 +1,14 @@
-\hypertarget{_text_settings_8h}{}\doxysection{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\+Text\+Settings.h File Reference}
-\label{_text_settings_8h}\index{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/Tetris/TextSettings.h@{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/Tetris/TextSettings.h}}
+\hypertarget{_text_settings_8h}{}\doxysection{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\+Text\+Settings.h File Reference}
+\label{_text_settings_8h}\index{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/TextSettings.h@{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/TextSettings.h}}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{center\+Text}} (int n)
-\begin{DoxyCompactList}\small\item\em Put the next text printing in the middle of the current line. \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text}} (char $\ast$color, int bold)
-\begin{DoxyCompactList}\small\item\em Set the text to a certain color (string -\/\texorpdfstring{$>$}{>} color) \end{DoxyCompactList}\item 
+\item 
 void \mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta\+Righe}} (int N)
-\begin{DoxyCompactList}\small\item\em Jumps to N new lines forward. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 
 
 \doxysubsection{Function Documentation}
@@ -18,56 +18,32 @@ void \mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta
 \doxysubsubsection{\texorpdfstring{centerText()}{centerText()}}
 {\footnotesize\ttfamily void center\+Text (\begin{DoxyParamCaption}\item[{int}]{n }\end{DoxyParamCaption})}
 
-
-
-Put the next text printing in the middle of the current line. 
-
-
+Put the next text printing in the middle of the current line 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em n} & a value to set the text position \\
 \hline
 \end{DoxyParams}
-
-
-Definition at line \mbox{\hyperlink{_text_settings_8h_source_l00005}{5}} of file \mbox{\hyperlink{_text_settings_8h_source}{Text\+Settings.\+h}}.
-
 \mbox{\Hypertarget{_text_settings_8h_a0916589349f2d883bef905033b33278c}\label{_text_settings_8h_a0916589349f2d883bef905033b33278c}} 
 \index{TextSettings.h@{TextSettings.h}!saltaRighe@{saltaRighe}}
 \index{saltaRighe@{saltaRighe}!TextSettings.h@{TextSettings.h}}
 \doxysubsubsection{\texorpdfstring{saltaRighe()}{saltaRighe()}}
 {\footnotesize\ttfamily void salta\+Righe (\begin{DoxyParamCaption}\item[{int}]{N }\end{DoxyParamCaption})}
 
-
-
-Jumps to N new lines forward. 
-
-
+Jumps to N new lines forward 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em N} & number of new lines to do \\
 \hline
 \end{DoxyParams}
-
-
-Definition at line \mbox{\hyperlink{_text_settings_8h_source_l00042}{42}} of file \mbox{\hyperlink{_text_settings_8h_source}{Text\+Settings.\+h}}.
-
 \mbox{\Hypertarget{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}\label{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}} 
 \index{TextSettings.h@{TextSettings.h}!setcolorText@{setcolorText}}
 \index{setcolorText@{setcolorText}!TextSettings.h@{TextSettings.h}}
 \doxysubsubsection{\texorpdfstring{setcolorText()}{setcolorText()}}
 {\footnotesize\ttfamily void setcolor\+Text (\begin{DoxyParamCaption}\item[{char $\ast$}]{color,  }\item[{int}]{bold }\end{DoxyParamCaption})}
 
-
-
 Set the text to a certain color (string -\/\texorpdfstring{$>$}{>} color) 
-
-
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{ in}}  & {\em color} & string color name \\
 \hline
 \mbox{\texttt{ in}}  & {\em bold} & text option \\
 \hline
 \end{DoxyParams}
-
-
-Definition at line \mbox{\hyperlink{_text_settings_8h_source_l00017}{17}} of file \mbox{\hyperlink{_text_settings_8h_source}{Text\+Settings.\+h}}.
-
