--- a/Doxygen documentation/latex/files.tex
+++ b/Doxygen documentation/latex/files.tex
@@ -1,11 +1,10 @@
 \doxysection{File List}
 Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{_cut_8h}{Cut.\+h}} }{\pageref{_cut_8h}}{}
-\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{_draw_pieces_8h}{Draw\+Pieces.\+h}} }{\pageref{_draw_pieces_8h}}{}
-\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{_extra_8h}{Extra.\+h}} }{\pageref{_extra_8h}}{}
-\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{_initializer_8h}{Initializer.\+h}} }{\pageref{_initializer_8h}}{}
-\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{_logic_8h}{Logic.\+h}} }{\pageref{_logic_8h}}{}
-\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{main_8c}{main.\+c}} }{\pageref{main_8c}}{}
-\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{_print_8h}{Print.\+h}} }{\pageref{_print_8h}}{}
-\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+Tetris/\mbox{\hyperlink{_text_settings_8h}{Text\+Settings.\+h}} }{\pageref{_text_settings_8h}}{}
+\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\mbox{\hyperlink{_cut_8h}{Cut.\+h}} \\*A summary of all the functions that would have made the main file be hard to read }{\pageref{_cut_8h}}{}
+\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\mbox{\hyperlink{_draw_pieces_8h}{Draw\+Pieces.\+h}} }{\pageref{_draw_pieces_8h}}{}
+\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\mbox{\hyperlink{_extra_8h}{Extra.\+h}} }{\pageref{_extra_8h}}{}
+\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\mbox{\hyperlink{_initializer_8h}{Initializer.\+h}} }{\pageref{_initializer_8h}}{}
+\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\mbox{\hyperlink{_logic_8h}{Logic.\+h}} }{\pageref{_logic_8h}}{}
+\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\mbox{\hyperlink{_print_8h}{Print.\+h}} }{\pageref{_print_8h}}{}
+\item\contentsline{section}{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\mbox{\hyperlink{_text_settings_8h}{Text\+Settings.\+h}} }{\pageref{_text_settings_8h}}{}
 \end{DoxyCompactList}
